--- a/recipe.yml
+++ b/recipe.yml
@@ -1,4 +1,4 @@
-name: 'Zoocha Security Password Polocy Recipe'
+name: 'Zoocha Security Password Policy Recipe'
 description: 'Provides Security related modules for Zoocha.'
 type: 'Feature'
 
